@@ -1,3 +1,8 @@
+2006-10-13  Sterling Augstine  <sterling@tensilica.com>
+
+	* dwarf2dbg.c (out_debug_info): Use TC_DWARF2_EMIT_OFFSET to emit
+	a disjoint DW_AT range.
+
 2006-10-13  Mei Ligang  <ligang@sunnorth.com.cn>
 
 	* config/tc-score.c (md_show_usage): Print -KPIC option usage.
